@@ -59,7 +59,6 @@ from grokcore.site import local_utility
 
 from zope.event import notify
 from zope.site.hooks import getSite
-from grok.util import getApplication
 from zope.lifecycleevent import (
     IObjectCreatedEvent, ObjectCreatedEvent,
     IObjectModifiedEvent, ObjectModifiedEvent,
