@@ -4,7 +4,8 @@ Grok changes
 1.4 (unreleased)
 ================
 
-- Nothing changed yet.
+- The `IApplication` interface, and getApplication moved to
+  ``grokcore.site``.
 
 
 1.3 (2010-11-03)
